kubernetes/apps/storage/longhorn/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-tailscale
spec:
  ingressClassName: tailscale
  rules:
    - host: longhorn
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - longhorn
